--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-12345
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+      <h1>Lorem ipsum dolor sit amet.</h1>
+</body>
+</html>
